--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/currychicken.html">Curry chicken</a></li>
         <li><a href="recipes/cordonsbleus.html">Cordons bleus</a></li>
-        <li><a href="recipes/chickenbbqpizza.html">Homemade BBQ pizza</a></li>
+        <li><a href="recipes/chickenbbqpizza.html">BBQ chicken pizza</a></li>
     </ul>
 </body>
 </html>
