--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul style="font-size: 30px;">
         <li><a href="recipes/currychicken.html">Curry chicken</a></li>
         <li><a href="recipes/cordonsbleus.html">Cordons bleus</a></li>
         <li><a href="recipes/chickenbbqpizza.html">BBQ chicken pizza</a></li>
